Quorum/Library/Tests/Templating/Fail/DiamondProblemWithTwoTypes_10.quorum
class Main
    action Main
        D<number, integer> d
    end
end